High Order Withclass added

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,7 +1,7 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
-
+/*
 .red {
   color: red;
 }
@@ -31,3 +31,4 @@
 .App button.Red:hover {
   background-color: salmon;
 }
+*/
